fix(Projects table): fix pagination alignment

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,6 +19,12 @@ body {
   background: #fefefe;
 }
 
+.client-data-grid {
+  .MuiTablePagination-root p {
+    margin-bottom: 0;
+  }
+}
+
 .dl--horizontal {
   div {
     display: flex;
